--- a/index.html
+++ b/index.html
@@ -181,36 +181,53 @@
   </div>
 </section>
 
-<div id="contactFormPopup" class="popup">
+<!-- <div id="contactFormPopup" class="popup">
   <div class="popup-content">
-      <span class="close">&times;</span>
-      <h2>Contact Us</h2>
-      <br id="contactForm">
-         <form id="contactForm">
-    <div class="form-group">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
-    </div>
+    <span class="close">&times;</span>
+    <h2>Contact Us</h2>
+    <br id="contactForm">
+    <form id="contactForm">
+        <div class="form-group">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
+        </div>
 
-    <div class="form-group">
-        <label for="email">Email :</label>
-        <input type="email" id="email" name="email" required>
-    </div>
+        <div class="form-group">
+            <label for="email">Email :</label>
+            <input type="email" id="email" name="email" required>
+        </div>
 
-    <div class="form-group">
-        <label for="message">Message:</label>
-        <textarea id="message" name="message" required></textarea>
-    </div>
+        <div class="form-group">
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" required></textarea>
+        </div>
 
-    <button type="submit">Submit</button>
-</form>
+        <button>Submit</button>
+    </form>
 
          
   </div>
-</div>
+</div> -->
 
 
+<form id="contactForm">
+  <div class="form-group">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required>
+  </div>
 
+  <div class="form-group">
+      <label for="email">Email :</label>
+      <input type="email" id="email" name="email" required>
+  </div>
+
+  <div class="form-group">
+      <label for="message">Message:</label>
+      <textarea id="message" name="message" required></textarea>
+  </div>
+
+  <button>Submit</button>
+</form>
 
 
 
